

syntax = "proto3";
option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/tokens";
package accounts.v1alpha1.tokens.v1;


/*
    TOKEN AUTH CCP
*/

message GetOneTokenCCPRequest {
    string token = 1;
}

message GetOneTokenCCPResponse {
    uint32 user_id = 1;
    string token = 2;
    string email = 3;
    string user_id_dex = 4;
    string first_name = 5;
    bool email_verified = 6;
}

message CreateTokenCCPRequest {
    string token_dex = 1;
}


message CreateTokenCCPResponse {
    string token_ccp = 1;
    string msg = 2;
    string error = 4;
    //tiempo de expiracion fma
    int64 time_expiration_mfa = 5;
    string user_id = 6;
}



/*
    LOGS 
*/

message Log{
    string user_id = 1;
    string system = 2;
    string client_web = 3;
    string ip = 4;
    string date = 5;
}
message SaveLogsRequest {
    Log log = 1;
}
message SaveLogsResponse {
    string msg = 1;
}

message LogsRequest {
    string user_id = 1;
}
message LogsResponse {
    repeated Log logs = 1;
}


//MFA

message EnableOrDisableMFARequest {
    string user_id = 1;
}

message EnableOrDisableMFAResponse {
    string msg = 1;
}

message MFARequest {
    string user_id = 1;
    repeated int32 numbers = 3;
}

message  MFAResponse {
    string token_ccp = 1;
    string msg = 2;
    string error = 3;
}